# shared/pkg/openapi/order/v1/oas_response_encoders_gen.go
@@ -282,7 +282,7 @@ func encodeCreateOrderResponse(response CreateOrderRes, w http.ResponseWriter, s
 
 func encodeGetOrderByUUIDResponse(response GetOrderByUUIDRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *GetOrderResponse:
+	case *OrderDto:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(200)
 		span.SetStatus(codes.Ok, http.StatusText(200))
