# shared/pkg/openapi/order/v1/oas_validators_gen.go
@@ -62,15 +62,15 @@ func (s *CreateOrderResponse) Validate() error {
 	return nil
 }
 
-func (s *GetOrderResponse) Validate() error {
+func (s *OrderDto) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
 	}
 
 	var failures []validate.FieldError
 	if err := func() error {
-		if err := s.PartUuids.Validate(); err != nil {
-			return err
+		if s.PartUuids == nil {
+			return errors.New("nil is invalid value")
 		}
 		return nil
 	}(); err != nil {
@@ -82,8 +82,8 @@ func (s *GetOrderResponse) Validate() error {
 	if err := func() error {
 		if value, ok := s.TotalPrice.Get(); ok {
 			if err := func() error {
-				if err := value.Validate(); err != nil {
-					return err
+				if err := (validate.Float{}).Validate(float64(value)); err != nil {
+					return errors.Wrap(err, "float")
 				}
 				return nil
 			}(); err != nil {
